# aegis-devin

./: Dockerfile  GITHUB_ABOUT.md  README.md  install.sh  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
aegis/: __main__.py
aegis/api/: app.py
aegis/core/: advanced_web_checks.py  ai_client.py  bootstrap.py  config_manager.py  db_manager.py  installer.py  reporting.py  signal_quality.py  ui.py  updater.py  workflow_engine.py
aegis/forensics/: __init__.py  capture.py
aegis/templates/: report.html  report.md
config/: config.yaml
tests/: test_ai_client.py  test_db_manager.py  test_signal_quality.py  test_workflow_engine.py
tests/integration/: test_cli_phase1.py
