[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-devin"
version = "2.1.0"
description = "Aegis-Devin: AI-driven autonomous penetration testing & network forensics platform. Autonomous red team, AI network forensics, CVE exploitation, MITRE ATT&CK mapping — one CLI. 100% free & open source."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Chandan Pandey" }
]
keywords = [
  "aegis-devin", "aegis", "devin", "ai-pentest", "autonomous-penetration-testing",
  "network-forensics", "ai-network-forensics", "autonomous-red-team",
  "ai-red-teaming", "penetration-testing", "offensive-security",
  "ai-security", "agentic-security", "llm-security", "ai-hacking",
  "autonomous-hacking", "ai-vulnerability-scanner", "ai-exploit",
  "network-security-monitor", "packet-analysis", "traffic-analysis",
  "recon", "reconnaissance", "subdomain-enumeration", "osint",
  "vulnerability-scanner", "exploit", "post-exploitation",
  "metasploit", "nuclei", "nmap", "sqlmap", "burp-suite",
  "cve", "cvss", "sarif", "github-code-scanning", "ci-cd-security",
  "red-team", "red-teaming", "ctf", "bug-bounty",
  "web-security", "api-security", "web-application-firewall", "waf-bypass",
  "active-directory", "bloodhound", "kerberoasting", "lateral-movement",
  "cloud-security", "aws-security", "azure-security", "gcp-security",
  "ssrf", "xxe", "xss", "sqli", "http-smuggling", "oob-detection",
  "lfi", "rce", "command-injection", "sql-injection",
  "kali-linux", "kali", "parrot-os", "linux-security",
  "cli", "python", "automation", "devops", "devsecops",
  "mitre-attack", "mitre-attck", "threat-intelligence", "ioc",
  "pcap", "wireshark", "zeek", "bro", "network-monitor",
  "zero-day", "exploit-framework", "security-automation",
  "groq", "nvidia-nim", "llm7", "free-ai-api",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Security",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: System :: Networking",
  "Topic :: Software Development :: Testing",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Development Status :: 4 - Beta",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]
dependencies = [
  "click>=8.1",
  "rich>=13.7",
  "pyyaml>=6.0",
  "requests>=2.31",
  "httpx>=0.27",
  "dnspython>=2.6",
  "defusedxml>=0.7",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  "textual>=0.55",
  "weasyprint>=62.0",
  "cvss>=3.0",
  "questionary>=2.0",
  "webtech>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.100",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-requests>=2.31",
  "types-PyYAML>=6.0",
]
mcp = [
  "mcp>=1.0",
]

[project.scripts]
aegis = "aegis.__main__:cli"
aegis-mcp = "aegis.mcp_server:main"

[project.urls]
Homepage = "https://github.com/thecnical/aegis-devin"
Documentation = "https://github.com/thecnical/aegis-devin/wiki"
Source = "https://github.com/thecnical/aegis-devin"
"Bug Tracker" = "https://github.com/thecnical/aegis-devin/issues"
Changelog = "https://github.com/thecnical/aegis-devin/releases"

[tool.setuptools]
include-package-data = true
packages = [
  "aegis",
  "aegis.api",
  "aegis.core",
  "aegis.tools",
  "aegis.tools.recon",
  "aegis.tools.vuln",
  "aegis.tools.exploit",
  "aegis.tools.post",
  "aegis.tools.report",
  "aegis.templates",
  "aegis.web",
  "aegis.tui",
]

[tool.setuptools.package-data]
aegis = ["tools/**/*.manifest.json", "templates/*.md", "templates/*.html", "web/templates/**/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E402: module-level import not at top — intentional in main.py (project-root
#        resolution must run before imports to set _DEFAULT_CONFIG/_DEFAULT_LOG)
# E501: line too long — pre-existing long strings in Rich markup / help text
# F401: imported but unused — some re-exports are intentional
extend-select = ["F", "E"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
